[options]
tests_require = pytest

[aliases]
# Alias `setup.py test` to `setup.py pytest`
test = pytest

[tool:pytest]
norecursedirs =
    .git
    venv
python_files =
    test_*.py
addopts =
    -ra
    -Wdefault
    --strict
    --ignore=setup.py
    --tb=short
    --log-level=DEBUG
    --pyargs
testpaths =
    tests/
